# stplayer

./: CMakeLists.txt  README.md  app.overlay  prj.conf  west.yml
include/: audio_playback.h  lv_conf.h  opus_file.h  sd_storage.h  usb_mass.h
src/: audio_playback.c  main.c  oggparse.c  opus_file.c  sd_storage.c  sine.h  usb_mass.c
